tests/data/fortran/errors/parser/err_implicit_none_undeclared_arg.f90
subroutine foo(x, y)
  implicit none
  integer, intent(in) :: x
end subroutine foo
